--- a/style/style.css
+++ b/style/style.css
@@ -12,3 +12,18 @@ body, html {
     display: flex;
     flex-direction: column;
 }
+
+.logo-container {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.logo {
+    max-width: 200px;
+}
+
+#content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
