--- a/style/style.css
+++ b/style/style.css
@@ -27,3 +27,29 @@ body, html {
     justify-content: center;
     align-items: center;
 }
+
+#content {
+    margin-top: 0px;
+    width: 80%;
+    max-width: 600px;
+    padding: 20px 40px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 10px;
+}
+
+.whiteBtn {
+    padding: 10px 20px;
+    margin: 10px;
+    border-radius: 40px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    color: #000;
+    cursor: pointer;
+    font-size: 14px;
+    width: 100%;
+    max-width: 350px;
+}
+
+.whiteBtn:hover {
+    opacity: 0.8;
+}
