--- a/style/style.css
+++ b/style/style.css
@@ -128,3 +128,23 @@ body, html {
     background-color: #d4af37; /* Darker gold on hover */
     opacity: 0.9; /* Slightly transparent on hover */
 }
+
+.hidden {
+    display: none;
+}
+
+h1, p {
+    margin: 10px;
+}
+
+input[type="text"] {
+    padding: 10px 20px;
+    margin: 0px 30px;
+    border-radius: 40px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    color: #000;
+    font-size: 14px;
+    width: 100%;
+    max-width: 320px;
+}
