--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,12 @@ body, html {
     max-width: 200px;
 }
 
+.screen {
+    font-size: 14px;
+    padding: 0px 20px;
+    min-height: 350px;
+}
+
 #content-wrapper {
     display: flex;
     justify-content: center;
