--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@ body, html {
     padding: 0;
     font-family: Arial, sans-serif;
     height: 100%;
-    background-image: url('../images/bg.png');
+    background-image: url('/assets/images/bg.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
